tests/e2e/examples/grafana-httproute-with-gateway-api/assertions.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-httproute-deployment
  ownerReferences:
  - apiVersion: grafana.integreatly.org/v1beta1
    kind: Grafana
    name: grafana-httproute
spec: {}
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-httproute-service
  ownerReferences:
  - apiVersion: grafana.integreatly.org/v1beta1
    kind: Grafana
    name: grafana-httproute
spec: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute-httproute
  ownerReferences:
  - apiVersion: grafana.integreatly.org/v1beta1
    kind: Grafana
    name: grafana-httproute
spec:
  parentRefs:
  - name: test-gateway
  hostnames:
  - grafana.example.com
  rules:
  - backendRefs:
    - name: grafana-httproute-service
      port: 3000
---
apiVersion: grafana.integreatly.org/v1beta1
kind: Grafana
metadata:
  name: grafana-httproute
status:
  (conditions != null): true
