tests/e2e/examples/grafana-httproute-with-gateway-api/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: grafana-httproute-with-crds
spec:
  concurrent: false
  steps:
  - name: install-gateway-api-crds
    try:
    - apply:
        file: ../../../fixtures/gateway-api/standard-install.yaml
  - name: create-resources
    try:
    - apply:
        template: true
        file: resources.yaml
    - assert:
        template: true
        file: assertions.yaml
  - name: cleanup-gateway-api-crds
    try:
    - delete:
        file: ../../../fixtures/gateway-api/standard-install.yaml
